log
Thu 25 Apr 2024 10:12:46 PM UTC: 
 hashmap.c | 26 +++++++++++++++++++++++---
 1 file changed, 23 insertions(+), 3 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:53:23: error: implicit declaration of function ‘resolveCollision’ [-Werror=implicit-function-declaration]
   53 |     int newPosition = resolveCollision(map, position);
      |                       ^~~~~~~~~~~~~~~~
hashmap.c:53:9: error: unused variable ‘newPosition’ [-Werror=unused-variable]
   53 |     int newPosition = resolveCollision(map, position);
      |         ^~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
dfe00e0
Thu 25 Apr 2024 10:15:06 PM UTC: 
 hashmap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
d6813d1
Thu 25 Apr 2024 10:16:28 PM UTC: 
 hashmap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  2|5
total_score: 20/70
b7d231c
Sat 27 Apr 2024 09:18:41 PM UTC: 
 hashmap.c | 21 ++++++++++++++++++++-
 1 file changed, 20 insertions(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
381d24a
Sat 27 Apr 2024 09:36:18 PM UTC: 
 hashmap.c | 37 ++++++++++++++-----------------------
 1 file changed, 14 insertions(+), 23 deletions(-)
 tests:  8|3
total_score: 40/70
777a581
Sat 27 Apr 2024 09:36:47 PM UTC: 
 hashmap.c | 5 -----
 1 file changed, 5 deletions(-)
 tests:  8|3
total_score: 40/70
5238eb6
